hphp/test/zend/good/ext/zip/tests/001.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("zip")) print "skip";
}
