hphp/test/zend/bad/Zend/tests/gc_029.php.skipif
<?php if (PHP_ZTS) { print "skip only for no-zts build"; }